# minecraft-launcher-lib-rs

./: Cargo.toml  README.md
src/: accounts.rs  assets.rs  config.rs  instances.rs  launch.rs  launchermeta.rs  lib.rs  libraries.rs  msa.rs  news.rs  profile.rs  util.rs  utils.rs  version_manifest.rs  version_meta.rs
