[package]
name = "minecraft-launcher-lib"
version = "0.1.0"
authors = ["Manuel Quarneti <manuelquarneti@gmail.com>"]
edition = "2021"
repository = "https://github.com/mq1/minecraft-launcher-lib-rs"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4"
ureq = { version = "2", features = ["json"] }
tiny_http = "0.11"
sha2 = "0.10"
rand = "0.8"
base64-url = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
url = { version = "2", features = ["serde"] }
zip = "0.5"

# remove when https://github.com/algesten/ureq/issues/470 is fixed
[dependencies.isahc]
version = "1"
default-features = false
features = ["text-decoding"]
