[package]
name = "minecraft-launcher-lib"
version = "0.1.0"
authors = ["Manuel Quarneti <manuelquarneti@gmail.com>"]
edition = "2021"
repository = "https://github.com/mq1/minecraft-launcher-lib-rs"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
directories = "4"
isahc = { version = "1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
